[tool.poetry]
name = "docker-sdk"
version = "0.1.0"
description = ""
authors = ["Ammar Lakis <ammar.lakis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
docker = "^5.0.3"
dockerfile-parse = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
